# scouter_agent

./: LICENSE  README.md  coverage_view.py  main.py  pyproject.toml  test_capture_device.py  test_tile_edge_pipeline.py
Notebooks/: tile_mapper_calibrator.ipynb
r&d/: test_desktop_zoom_controller.py  test_minitouch.py  test_roi_utils.py
scouter_agent/application/services/: map_exploration_service.py  map_scouter_service.py  screenshot_scouting_service.py
scouter_agent/docs/: setup_minitouch.md
scouter_agent/domain/: constants.py  row_tracker.py  tile_geometry.py
scouter_agent/domain/entities/: map_tile.py
scouter_agent/infrastructure/: capture_devices.py  map_explorer.py  map_navigator.py  minitouch_controller.py  ocr_utils.py  screen_capture.py  window_roi_calculator.py
scouter_agent/infrastructure/adb/: capture_streaming.py
scouter_agent/object_recognizer/: detect_objects.py
scouter_agent/screen_controller/: desktop_zoom_controller.py  screen_gestures.py  zoom_controller.py
scouter_agent/scripts/: build_minitouch.sh
scouter_agent/utilities/: border_crop.py  calibration_gui_tool.py  coverage_bitmap.py  debug_swipe_visualizer.py  hough_corner_detector.py  hsv_tuner_gui.py  object_tile_mapper.py  roi_utils.py  tile_calibration_pipeline.py  tile_calibrator.py  tile_edge_filter.py  tile_geometry_calibrator.py  tile_geometry_calibrator_single_instance.py  tile_grid_overlay.py  tile_logger.py  tile_mapper.py  tile_overlay_debug.py
scouter_agent/utilities/pipelines/: test_capture_device.py  test_tile_edge_detection.py  test_tile_edge_pipeline.py
tests/: tests_capture_crop.py
