[project]
name = "scouter_agent"
version = "0.0.0"
description = "To create Scout agents for LSS and store them in pandas."
authors = [
    {name = "jawadMansoor",email = "jawadmansoor@Outlook.com"}
]
license = {text = "proprietery"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_repo"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch_repo"}
torchvision = {source = "pytorch_repo"}
torchaudio = {source = "pytorch_repo"}

[tool.poetry.group.dev.dependencies]
mss = "^10.0.0"
pywin32 = "^310"

